--- a/main.css
+++ b/main.css
@@ -7,5 +7,7 @@
   transform    : rotate(335deg);
 }
 body {
+    width: 1000px;
+  height: 900px;
   background: linear-gradient(#05FBFF, #1E00FF);
 }
