--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
   transform    : rotate(335deg);
 }
 body {
-    width: 1000px;
-  height: 400px;
+    width: 100%;
+  height: 100%;
   background: linear-gradient(#05FBFF, #1E00FF);
 }
