--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
   transform    : rotate(335deg);
 }
 body {
-    width: 100%;
-  height: 100%;
+    width: 1000px;
+  height: 600px;
   background: linear-gradient(#05FBFF, #1E00FF);
 }
