--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
     width: 1000px;
   height: 650px;
-  background: linear-gradient(#05FBFF, #1E00FF);
+  background: linear-gradient(#84C1FF, #A8B3FF);
 }
